# limrad-starpas

./: .gitattributes  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.cfg  setup.py
docs/source/: conf.py  index.rst
docs/source/arduino/: setup.md
docs/source/code_docs/: autodocs.rst
docs/source/starpas/: setup.md
src/arduino/: data_structure_sd_card.txt
src/arduino/ESP32/sensorfusion-test/ESP32_ST_USFS_Baseline_Calibration_Utility__Final/: ESP32_ST_USFS_Baseline_Calibration_Utility__Final.ino  Globals.h  config.h
src/arduino/libraries/SimpleFTPServer/: FtpServerKey.h
src/starpas/: __init__.py  _version.py  click.py  data.py  ftp.py  plotutils.py  utils.py
src/starpas/share/: README.l1a.md  README.l1b.md  starpas-config.json  starpas_cfmeta.json  starpas_config.json
